cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana 
  namespace: default 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /admin/grafana
    - uri:
        prefix: /public/build
    route:
    - destination:
        host: grafana 
        port:
          number: 3000 
      weight: 100
