cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-hystrix.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-hystrix 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri:
# TODO:  Change this to /admin/hystrix (we might need to change webapp?)
        prefix: /hystrix-dashboard
    route:
    - destination:
        host: dashboard-hystrix 
        port:
          number: 7979 
      weight: 100
#    websocketUpgrade: true
#    appendHeaders:
#      Upgrade: required
#      Connection: keep-alive
