cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-mlflow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow 
  namespace: default 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /admin/tracking
    route:
    - destination:
        host: mlflow 
        port:
          number: 5000 
      weight: 100
#    websocketUpgrade: true
  http:
  - match:
    - uri:
        prefix: /ajax-api
    route:
    - destination:
        host: mlflow
        port:
          number: 5000
      weight: 100
#    websocketUpgrade: true
