cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-notebook.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notebook-cpu
  namespace: default 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri: 
        regex: /admin/nb/(.*)/(.*)/(api/kernels/[^/]+/(channels|iopub|shell|stdin)|terminals/websocket)/? 
    route:
    - destination:
        host: notebook-cpu
        port:
          number: 80
      weight: 100
    websocketUpgrade: true
  http:
  - match:
    - uri:
        prefix: /admin/nb
    route:
    - destination:
        host: notebook-cpu
        port:
          number: 80
      weight: 100
    websocketUpgrade: true
