cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus 
  namespace: default 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
      weight: 100
  - match:
    - uri:
        prefix: /graph
    route:
    - destination:
        host: prometheus 
        port:
          number: 9090
      weight: 100
