cli/cli_pipeline/templates/cluster/yaml/istio/virtualservice-turbine.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-turbine 
  namespace: default 
spec:
  hosts:
  - "*" 
  gateways:
  - gateway
  http:
  - match:
    - uri: 
        prefix: /admin/turbine
    rewrite:
      uri: /
    route:
    - destination:
        host: dashboard-turbine 
        port:
          number: 8989 
      weight: 100
    websocketUpgrade: true
    appendHeaders:
      Upgrade: required
      Connection: upgrade
